@@ -1,3 +1,11 @@
+2001-08-09  Martin Baulig  <baulig@suse.de>
+
+	* foobar-widget.[ch]: Ported to GTK+ 2.0.
+
+	* Makefile.am: Added foobar-widget.[ch] and
+	tasklist_icon.[ch] to panel-temp and fixed
+	the marshaller creation.
+	
 2001-08-07  Martin Baulig  <baulig@suse.de>
 
 	* main.c: Ported to GNOME 2.
